logs/pyhk2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hk2'...
Listing './lib/python3.5/site-packages/hk2/annotations'...
Listing './lib/python3.5/site-packages/hk2/extensions'...
Listing './lib/python3.5/site-packages/hk2/extensions/impl'...
Listing './lib/python3.5/site-packages/hk2/extensions/impl/declarative'...
Compiling './lib/python3.5/site-packages/hk2/extensions/impl/declarative/plugin_desc_parser.py'...
***   File "./lib/python3.5/site-packages/hk2/extensions/impl/declarative/plugin_desc_parser.py", line 31
    exec 'from hk2.extensions import *' in loader.__dict__
                                      ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/hk2/injection'...
Compiling './lib/python3.5/site-packages/hk2/injection/injection_context.py'...
***   File "./lib/python3.5/site-packages/hk2/injection/injection_context.py", line 59
    except InjectionError, iex:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hk2/kernel'...
Listing './lib/python3.5/site-packages/hk2/kernel/plugin_loaders'...
Listing './lib/python3.5/site-packages/hk2/types'...
Listing './lib/python3.5/site-packages/hk2/utils'...
Compiling './lib/python3.5/site-packages/hk2/utils/pathutil.py'...
***   File "./lib/python3.5/site-packages/hk2/utils/pathutil.py", line 22
    def makedirs(path, mode=0777):
                               ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/hk2/utils/version.py'...
***   File "./lib/python3.5/site-packages/hk2/utils/version.py", line 53
    raise ValueError, "invalid version number '%s'" % vstring
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhk2-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
